- Implemented templates
- Started implementation of printing (at the moment, only the dialog opens :-)
- Fixed lots of speed problems in KWFormatContext when editing long textes. It was terribly slow.
  But it's possible that I introduced some bugs - if this is the case I'll, of course, fix them :-)
  What I did: KWFormatContext::init(..) is called quite often when navigating with the cursor (e.g
  a line up, deleting/inserting text, etc.). 
  The implementation of this init methode started at the first parag of the text and went through
  _all_ paragraphs, until the needed one was reached. For long textes (I tested with 70 pages) this was
  damn slow when you were nearly at the end of the text. Now init doesn't go through all parags anymore
  if it is not really needed (and it is nearly never needed!). So this is much faster now.

Reggie, 20.10.1998:
-------------------
- Some cursor navigation and calculation fixes in KWFormatContext
- Some small fixes in KWPage
- Bugfix when loading files

Reggie, 21.10.1998:
-------------------
- Implemented printing documents
- fixed some cursor navigation bugs when pressing return

Reggie, 22.10.1998:
-------------------
- Some cursor navigation improvments and redraw fixes

Reggie, 23.10.1998:
-------------------
- Started implementing that text can flow around other frames. It
  already works somehow :-))

Reggie, 24.10.1998:
-------------------
- More work on text flow around frames

Reggie, 25.10.1998:
-------------------
- Implemented selecting multiple frames
- Implemented moving frames

Reggie, 26.10.1998:
-------------------
- Implemented resizing frames
- Added a new property for framesets, which allows the user to say,
  if a frameset should automatically add frames when the text of 
  the frameset doesn't fit into the frames anymore
- Started writing a dialog for configuring frames and framesets. Currently
  it's possible to set the text run-around type for frames and the above
  described property for framesets