@@ -291,3 +291,9 @@ Reggie, 26.10.1998:
 - Started writing a dialog for configuring frames and framesets. Currently
   it's possible to set the text run-around type for frames and the above
   described property for framesets
+
+Reggie, 27.10.1998:
+-------------------
+- Implemented Run Around Gap
+- Added the possibility to set the Run Around Gap for each frame
+  with the frame setting dialog
